--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BuscarLivroActivity"></activity>
+        <activity android:name=".DeletarLivrosActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".BuscarLivroActivity" />
         <activity android:name=".ListarLivrosActivity" />
         <activity android:name=".CadastrarLivrosActivity" />
         <activity android:name=".MainActivity">
