--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     testImplementation "androidx.room:room-testing:2.2.0-rc01"
 
     kapt 'android.arch.persistence.room:compiler:2.2.0-rc01'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
