--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListViewActivity"></activity>
-        <activity android:name=".DeletarLivrosActivity"></activity>
+        <activity android:name=".RecyclerViewActivity"></activity>
+        <activity android:name=".ListViewActivity" />
+        <activity android:name=".DeletarLivrosActivity" />
         <activity android:name=".BuscarLivroActivity" />
         <activity android:name=".ListarLivrosActivity" />
         <activity android:name=".CadastrarLivrosActivity" />
