--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,14 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    implementation 'com.android.support:design:29.0.1'
+    implementation 'com.android.support:recyclerview-v7:29.0.1'
+    implementation 'com.android.support:cardview-v7:29.0.1'
+
     implementation "androidx.room:room-runtime:2.2.0-rc01"
     annotationProcessor "androidx.room:room-compiler:2.2.0-rc01"
     testImplementation "androidx.room:room-testing:2.2.0-rc01"
 
     kapt 'android.arch.persistence.room:compiler:2.2.0-rc01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
