--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PageViewActivity"></activity>
-        <activity android:name=".SwipeDragDropActivity"></activity>
+        <activity android:name=".GridViewActivity"></activity>
+        <activity android:name=".PageViewActivity" />
+        <activity android:name=".SwipeDragDropActivity" />
         <activity android:name=".RecyclerViewActivity" />
         <activity android:name=".ListViewActivity" />
         <activity android:name=".DeletarLivrosActivity" />
